Enhance service worker with registration, background sync, and messaging

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,5 +23,18 @@
     }
   ],
   "categories": ["productivity", "lifestyle"],
-  "screenshots": []
+  "screenshots": [
+    {
+      "src": "./icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "./icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "form_factor": "narrow"
+    }
+  ]
 }
