Add proper PWA screenshots, fix manifest paths, remove generator scripts

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "LifeSync",
   "id": "/",
   "description": "A comprehensive personal assistant PWA featuring smart AI task management, a game center for downtime, world clock, and local notifications.",
-  "start_url": "./",
-  "scope": "./",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#6366f1",
@@ -26,16 +26,18 @@
   "categories": ["productivity", "lifestyle"],
   "screenshots": [
     {
-      "src": "./icon-512.png",
-      "sizes": "512x512",
+      "src": "./screenshot-wide.png",
+      "sizes": "1280x720",
       "type": "image/png",
-      "form_factor": "wide"
+      "form_factor": "wide",
+      "label": "LifeSync main interface on desktop"
     },
     {
-      "src": "./icon-512.png",
-      "sizes": "512x512",
+      "src": "./screenshot-narrow.png",
+      "sizes": "750x1334",
       "type": "image/png",
-      "form_factor": "narrow"
+      "form_factor": "narrow",
+      "label": "LifeSync main interface on mobile"
     }
   ]
 }
